add crud user-menu
